--- a/proposal.qmd
+++ b/proposal.qmd
@@ -190,13 +190,13 @@ Plot: A possible heatmap where the x-axis represents different races and the y-a
 +---------------------------------------------+-------------+-----------+--------+----------+---------------------------------------------------------------------------------------------------------------------------------------+
 | Exploratory Analysis - Question 1,          | Not Started | Sanjeev,  | Week 3 | High     | Answer Questions and Generate visualizations and summaries to identify trends.                                                        |
 |                                             |             |           |        |          |                                                                                                                                       |
-| Question 2,                                 |             | Yogeshwar |        |          |                                                                                                                                       |
+| Question 2,                                 |             | Yogeshwar | Week 4        |          |                                                                                                                                       |
 |                                             |             |           |        |          |                                                                                                                                       |
-| Question 3,                                 |             | Sahana    |        |          |                                                                                                                                       |
+| Question 3,                                 |             | Sahana    |Week 5        |          |                                                                                                                                       |
 |                                             |             |           |        |          |                                                                                                                                       |
-| Question 4                                  |             | Sindhu    |        |          |                                                                                                                                       |
+| Question 4                                  |             | Sindhu    |Week 6        |          |                                                                                                                                       |
 +---------------------------------------------+-------------+-----------+--------+----------+---------------------------------------------------------------------------------------------------------------------------------------+
-| Report Writing & Final Project Presentation | Not Started | Sanjeev,  | Week 4 | High     | Compile findings, methods, and conclusions in a formal report. Prepare presentation slides and summary for final project presentation |
+| Report Writing & Final Project Presentation | Not Started | Sanjeev,  | Week 7 | High     | Compile findings, methods, and conclusions in a formal report. Prepare presentation slides and summary for final project presentation |
 |                                             |             |           |        |          |                                                                                                                                       |
 |                                             |             | Yogeshwar |        |          |                                                                                                                                       |
 |                                             |             |           |        |          |                                                                                                                                       |
